# openplanetdata-airflow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docker/: Dockerfile  build.sh  requirements.txt  update-versions.sh
python/: publish.sh
python/openplanetdata/airflow/: __init__.py  defaults.py
python/openplanetdata/airflow/data/: continents.py
python/openplanetdata/airflow/operators/: __init__.py  gol.py  ogr2ogr.py  r2.py
python/openplanetdata/airflow/utils/: __init__.py  k8s.py  shell.py
