[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openplanetdata-airflow"
version = "0.1.1"
description = "Shared Airflow infrastructure for OpenPlanetData workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OpenPlanetData" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/openplanetdata/openplanetdata-airflow"
Repository = "https://github.com/openplanetdata/openplanetdata-airflow"

[tool.hatch.build.targets.wheel]
packages = ["python/openplanetdata"]

[tool.hatch.build.targets.wheel.sources]
"python" = ""

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
